Reset ResourceDispatcher::PendingRequest::request_start on redirect

net::URLRequest clears its request_start on redirect, so we should do
the same in the renderer.

Bug: 824155, 835502
Change-Id: I74252d62d98aae0e26e4ee30ad21eeefb5fda267
Reviewed-on: https://chromium-review.googlesource.com/1054907
Commit-Queue: Yutaka Hirano <yhirano@chromium.org>
Reviewed-by: Matt Menke <mmenke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557810}
Former-commit-id: 560e1ab54b7397d97533fd08a047ca7f54071bcf